# chole_bhature

project_files/lab1/: mul_csynth.rpt  vivado.jou  vivado_pid2339583.str
project_files/lab1/mul_lab1/: mul_lab1.xpr
project_files/project1/fir11/: fir_csynth.rpt
project_files/project1/fir128/: fir_csynth.rpt
project_files/project1/fir128_q2/: fir.h  fir_csynth.rpt
project_files/project1/fir128_q3/: fir.cpp  fir_csynth.rpt
project_files/project1/fir128_q4/: fir.cpp  fir_csynth.rpt
project_files/project1/fir128_q5_6/: fir.cpp  fir_csynth.rpt
project_files/project1/fir128_q7/: fir.cpp  fir.h  fir_csynth.rpt
project_files/project2/cordic/HLS/cordic_3a_lab/cordic/cordic.gen/sources_1/bd/cordic/ip/cordic_cordiccart2pol_0_0/drivers/cordiccart2pol_v1_0/src/: CMakeLists.txt  Makefile  xcordiccart2pol.c  xcordiccart2pol.h  xcordiccart2pol_hw.h  xcordiccart2pol_linux.c  xcordiccart2pol_sinit.c
project_files/project3/Demo/: DFT.ipynb  design_dft_1024_wrapper.bit
project_files/project3/Q1/: dft.cpp  dft_csynth.rpt
project_files/project3/Q2/: dft.cpp  dft.tcl  dft_csynth.rpt
project_files/project3/Q3/: dft.cpp  dft_csynth.rpt  dft_test.cpp
project_files/project3/Q4/: Makefile  dft.cpp
project_files/project3/Q5/: dft.cpp  dft.h
project_files/project3/Q6a/: dft.cpp  dft.h
project_files/project3/Q6b/: dft.cpp  dft_csynth.rpt
project_files/project3/Q7/: dft.cpp  dft.tcl  dft_csynth.rpt
project_files/project3/Q8/: dft.cpp  dft_csynth.rpt
project_files/project3/Q9/: dft.cpp  dft.h  dft_csynth.rpt  dft_test.cpp  export_dft.tcl  vivado.jou
(+1198 files in other folders)
